--- a/src/assets/scss/layouts/container.scss
+++ b/src/assets/scss/layouts/container.scss
@@ -4,10 +4,15 @@
   flex-direction: column;
   padding-bottom: 7.4em;
   padding-top: 1.6em;
-  height: 100%;
+  // height: 100%;
 
+  &.index-page {
+    overflow-y: hidden;
+  }
   @media (min-width: $screen-sm) {
     flex-direction: row;
     padding-top: 4.7em;
+    padding-bottom: 0;
+    height: 100vh;
   }
 }
