--- a/src/assets/scss/layouts/content.scss
+++ b/src/assets/scss/layouts/content.scss
@@ -10,6 +10,8 @@
   @media (min-width: $screen-sm) {
     flex-direction: row;
     margin-top: 0;
+    height: 100%;
+    // height: 100vh;
   }
 }
 
