--- a/src/assets/scss/layouts/footer.scss
+++ b/src/assets/scss/layouts/footer.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   display: flex;
   flex-direction: row;
-  padding: 0 5em 0;
+  padding: 0 5em 1.1em;
   position: absolute;
   width: 100%;
 
@@ -24,7 +24,6 @@
 .footer p {
   font-size: .7em;
   text-transform: uppercase;
-  margin-bottom: 1.1rem;
 
   @media (min-width: $screen-sm) {
     font-size: .8em;
